# simple-chttp

./: .gitignore  CMakeLists.txt
.github/: README.md
src/: main.c
src/Server/: server.c  server.h
src/common/Logs/: logs.c  logs.h
src/common/parser/CFG/: parser.c  parser.h
src/common/parser/ENV/: parser.c  parser.h
www/: index.html
